# bou

./: .gitignore  README.md  pyproject.toml
example/: README.md  build.py  pyproject.toml  requirements.prd.txt
example/config/: settings.py
example/services/: app.service  env
example/static/css/: _tailwind.css
src/bou/: __main__.py  cli.py  contrib.py  errors.py  fpi.py  post-receive
